<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:defaultValue="@string/pref_default_favourite_social"
            android:entries="@array/pref_entries_favourite_social"
            android:entryValues="@array/pref_values_favourite_social"
            android:key="favourite_social_network"
            android:title="@string/pref_title_favourite_social"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>
    <EditTextPreference
        android:defaultValue="@string/pref_default_name"
        android:key="user_display_name"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Display Name"
        app:useSimpleSummaryProvider="true" />
    <EditTextPreference
        android:defaultValue="@string/pref_default_emailAddress"
        android:key="user_email_address"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Email Address"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>
